# chuckleicfp

./: .gitignore  CMakeLists.txt  Makefile  compile.sh  main.cpp  state.cpp  state.h
ArchVince/: Makefile  Mine.cpp  Mine.h  NodeMap.cpp  NodeMap.h  Pathfinder.cpp  Pathfinder.h  main.cpp
bartwe/visualizer/: Makefile  PACKAGES  README  lifter  readme.txt
bartwe/visualizer/src/: AStar.java  Cell.java  DasaConsole.java  DisplayWindow.java  DisplayWorld.java  DualAStarApproach.java  Manual.java  PathingGUI.java  RobotAction.java  SolidWorldState.java  StepLogic.java  StepResult.java  TransporterMap.java  WorldState.java  WorldStateHash.java
jeroen/: .gitignore  Makefile  gui  guihook.cpp  libloader.py  main.cpp  main.h  state.cpp  state.h
kyren/: .gitignore  Best.cpp  Best.hpp  BestSoFar.cpp  BestSoFar.h  BestSoFar.hpp  Grid.hpp  Heuristic.cpp  Heuristic.hpp  Makefile  Mine.cpp  Mine.hpp  Problem.cpp  Problem.hpp  Searcher.cpp  Searcher.hpp  Solver.cpp  Solvers.cpp  Solvers.hpp  Tile.hpp  Types.hpp  Util.hpp  guihook.cpp  main.cpp  todo.beards  validate.py
kyren/kyren_chunk/: Makefile  Mine.hpp  Solver.hpp  main.cpp
kyren_chunk/: Best.cpp  Best.hpp  Grid.hpp  Makefile  Mine.cpp  Mine.hpp  Problem.cpp  Problem.hpp  Searcher.cpp  Searcher.hpp  Types.hpp  Util.cpp  guihook.cpp  main.cpp
literature/: resources.txt  solution.java
maps/: beard0.map  huge1.map  huge2.map  patho1.map  patho2.map  patho3.map  patho4.map  patho5.map  patho6.map  patho7.map  patho8.map  puzzle4.map  spectest1.map  spectest2.map
munin/: domunin  domunin.py  domunintest  hiscore.out  icfp  mkreport.py
munin/data/: bartpastebin.out  hiscore.out  mon.04:53:12.2f754e61646dbf5ad294400fb446263a51913033.out  mon.05:48:59.986e1bce6f09aa1c97398ba4803ddeb24532183c.out  mon.07.28.12.2f754e.out  mon.08.23.59.986e1b.out  mon.09.10.36.eccd8a.out  mon.09.28.52.6711ae.out  mon.10.01.50.d961f0c-150s.out  mon.10.01.50.d961f0c.out  mon.10.15.58.215e35.out
omni/: main.cpp  main.h  timer.hpp
solutions/: patho4.solution  patho5.solution  patho6.solution  patho7.solution  patho8.solution
submissions/: icfp-95435928.tgz
submissions/final-a/: README  lifter
submissions/final-a/src/: Mine.cpp  Problem.cpp  Solvers.cpp  Solvers.hpp  guihook.cpp  main.cpp
submissions/lighting1-submitted/: icfp-95435928.tgz
tester/: bart-6971bddfc0b49f4723e9648ccc8ad619769a047b.txt  dotest.py  kyren-7256d71727a8b28ec19f3877b271a534220353a9.txt
